--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@react-router/dev": "^7.2.0",
     "@react-router/remix-routes-option-adapter": "7.2.0",
     "@tailwindcss/vite": "^4.0.0",
+    "@testing-library/dom": "10.4.0",
+    "@testing-library/jest-dom": "6.6.3",
+    "@testing-library/react": "16.2.0",
+    "@testing-library/user-event": "14.6.1",
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
@@ -33,6 +37,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-testing-library": "^7.1.1",
     "eslint-plugin-unicorn": "^57.0.0",
+    "happy-dom": "17.1.8",
     "husky": "^8.0.0",
     "prettier": "^3.5.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
@@ -42,7 +47,8 @@
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.25.0",
     "vite": "^5.4.11",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "3.0.7"
   },
   "name": "french-house-stack-v2",
   "private": true,
@@ -54,6 +60,7 @@
     "lint:fix": "eslint . --fix",
     "prepare": "husky || true",
     "start": "react-router-serve ./build/server/index.js",
+    "test": "vitest --reporter=verbose",
     "typecheck": "react-router typegen && tsc"
   },
   "type": "module"
