--- a/package.json
+++ b/package.json
@@ -7,10 +7,21 @@
   "dependencies": {
     "@react-router/node": "^7.2.0",
     "@react-router/serve": "^7.2.0",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "i18next": "24.2.2",
+    "i18next-browser-languagedetector": "8.0.4",
+    "i18next-fs-backend": "2.6.0",
+    "i18next-http-backend": "3.0.2",
     "isbot": "^5.1.17",
+    "lucide-react": "0.477.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.2.0"
+    "react-i18next": "15.4.1",
+    "react-router": "^7.2.0",
+    "remix-i18next": "7.0.2",
+    "tailwind-merge": "3.0.2",
+    "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.7.1",
