--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
     }
   },
   "dependencies": {
-    "@hookform/resolvers": "4.1.3",
+    "@hookform/resolvers": "^4.1.3",
     "@paralleldrive/cuid2": "^2.2.2",
-    "@prisma/client": "6.5.0",
-    "@radix-ui/react-avatar": "1.1.3",
-    "@radix-ui/react-checkbox": "1.1.4",
-    "@radix-ui/react-label": "2.1.2",
-    "@radix-ui/react-radio-group": "1.2.3",
-    "@radix-ui/react-slot": "1.1.2",
+    "@prisma/client": "^6.5.0",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-collapsible": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-radio-group": "^1.2.3",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@react-router/node": "^7.2.0",
     "@react-router/serve": "^7.2.0",
     "@supabase/ssr": "^0.5.2",
@@ -23,20 +28,21 @@
     "i18next-browser-languagedetector": "^8.0.4",
     "i18next-fs-backend": "^2.6.0",
     "i18next-http-backend": "^3.0.2",
-    "input-otp": "1.4.2",
+    "input-otp": "^1.4.2",
     "isbot": "^5.1.17",
     "lucide-react": "^0.477.0",
+    "ramda": "^0.30.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "7.54.2",
+    "react-hook-form": "^7.54.2",
     "react-i18next": "^15.4.1",
     "react-router": "^7.2.0",
     "remix-i18next": "^7.0.2",
-    "remix-utils": "8.4.0",
+    "remix-utils": "^8.4.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "tiny-invariant": "^1.3.3",
-    "zod": "3.24.2"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@axe-core/playwright": "^4.10.1",
@@ -54,13 +60,14 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/node": "^20",
+    "@types/ramda": "^0.30.2",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
     "@vitest/eslint-plugin": "^1.1.36",
     "commitizen": "^4.3.1",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
-    "dotenv": "16.4.7",
+    "dotenv": "^16.4.7",
     "eslint": "^9.21.0",
     "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-playwright": "^2.2.0",
@@ -73,7 +80,7 @@
     "msw": "^2.7.3",
     "prettier": "^3.5.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "prisma": "6.5.0",
+    "prisma": "^6.5.0",
     "react-router-devtools": "^1.1.0",
     "remix-flat-routes": "^0.8.5",
     "tailwindcss": "^4.0.0",
