feat(settings): add team members settings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,7 +38,7 @@
     "**/.server/**/*",
     "**/.client/**/*",
     ".react-router/types/**/*",
-    "commitlint.config.js",
+    "commitlint.config.mjs",
     "eslint.config.js",
     "prettier.config.js"
   ]
