--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-navigation-menu": "1.2.5",
+    "@radix-ui/react-popover": "1.1.6",
     "@radix-ui/react-radio-group": "^1.2.3",
+    "@radix-ui/react-select": "2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
@@ -23,8 +25,13 @@
     "@react-router/serve": "^7.2.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.49.1",
+    "@tabler/icons-react": "3.31.0",
+    "@tanstack/react-table": "8.21.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "1.1.1",
+    "copy-to-clipboard": "3.3.3",
+    "date-fns": "4.1.0",
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.4",
     "i18next-fs-backend": "^2.6.0",
@@ -66,6 +73,7 @@
     "@types/ramda": "^0.30.2",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
+    "@vitest/coverage-v8": "3.1.1",
     "@vitest/eslint-plugin": "^1.1.36",
     "commitizen": "^4.3.1",
     "cross-env": "^7.0.3",
@@ -120,7 +128,8 @@
     "test": "vitest --reporter=verbose",
     "test:e2e": "npx playwright test",
     "test:e2e:ui": "npx playwright test --ui",
-    "typecheck": "react-router typegen && tsc"
+    "typecheck": "react-router typegen && tsc",
+    "typegen": "react-router typegen"
   },
   "type": "module"
 }
