feat(new-organization): add file upload support to upload logos

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
-SUPABASE_URL="https://<PROJECT_ID>.supabase.co"
-SUPABASE_ANON_KEY="ey<ANON_KEY>"
+VITE_SUPABASE_URL="https://<PROJECT_ID>.supabase.co"
+VITE_SUPABASE_ANON_KEY="ey<ANON_KEY>"
 APP_URL="http://localhost:3000"
 SESSION_SECRET=a-sufficiently-long-secret-ideally-32-characters-or-more
