--- a/package.json
+++ b/package.json
@@ -11,26 +11,26 @@
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-collapsible": "^1.1.3",
-    "@radix-ui/react-dialog": "1.1.6",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-navigation-menu": "1.2.5",
-    "@radix-ui/react-popover": "1.1.6",
+    "@radix-ui/react-navigation-menu": "^1.2.5",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-radio-group": "^1.2.3",
-    "@radix-ui/react-select": "2.1.6",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@react-router/node": "^7.2.0",
     "@react-router/serve": "^7.2.0",
-    "@supabase/ssr": "^0.5.2",
-    "@supabase/supabase-js": "^2.49.1",
-    "@tanstack/react-table": "8.21.2",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.49.4",
+    "@tanstack/react-table": "^8.21.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "1.1.1",
-    "copy-to-clipboard": "3.3.3",
-    "date-fns": "4.1.0",
+    "cmdk": "^1.1.1",
+    "copy-to-clipboard": "^3.3.3",
+    "date-fns": "^4.1.0",
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.4",
     "i18next-fs-backend": "^2.6.0",
@@ -38,17 +38,18 @@
     "input-otp": "^1.4.2",
     "isbot": "^5.1.17",
     "lucide-react": "^0.477.0",
-    "next-themes": "0.4.6",
+    "next-themes": "^0.4.6",
     "ramda": "^0.30.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
     "react-i18next": "^15.4.1",
-    "react-icons": "5.5.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.2.0",
     "remix-i18next": "^7.0.2",
     "remix-utils": "^8.4.0",
-    "sonner": "2.0.1",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "tiny-invariant": "^1.3.3",
@@ -73,7 +74,7 @@
     "@types/ramda": "^0.30.2",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
-    "@vitest/coverage-v8": "3.1.1",
+    "@vitest/coverage-v8": "^3.1.1",
     "@vitest/eslint-plugin": "^1.1.36",
     "commitizen": "^4.3.1",
     "cross-env": "^7.0.3",
@@ -106,8 +107,9 @@
   "private": true,
   "scripts": {
     "build": "react-router build",
+    "build-with-mocks": "react-router build && npx msw init ./build/client --no-save",
     "dev": "react-router dev",
-    "dev-with-mocks": "cross-env CLIENT_MOCKS=true SERVER_MOCKS=true npm run dev",
+    "dev-with-mocks": "cross-env VITE_CLIENT_MOCKS=true SERVER_MOCKS=true npm run dev",
     "dev-with-server-mocks": "cross-env SERVER_MOCKS=true npm run dev",
     "format": "prettier --write .",
     "lint": "eslint .",
@@ -123,7 +125,6 @@
     "prisma:studio": "npx prisma studio",
     "prisma:wipe": "npx prisma migrate reset --force && npx prisma db push",
     "start": "react-router-serve ./build/server/index.js",
-    "start-with-mocks": "cross-env CLIENT_MOCKS=true SERVER_MOCKS=true npm run start",
     "start-with-server-mocks": "cross-env SERVER_MOCKS=true npm run start",
     "test": "vitest --reporter=verbose",
     "test:e2e": "npx playwright test",
