feat(storage): delete images when updating an avatar or logo or deleting the entities

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=pub
 # Supabase
 VITE_SUPABASE_URL="https://<PROJECT_ID>.supabase.co"
 VITE_SUPABASE_ANON_KEY="ey<ANON_KEY>"
+SUPABASE_SERVICE_ROLE_KEY="ey<SERVICE_ROLE_KEY>"
 
 # App
 APP_URL="http://localhost:3000"
