--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@oslojs/crypto": "^1.0.1",
     "@oslojs/encoding": "^1.1.0",
     "@paralleldrive/cuid2": "^2.2.2",
-    "@prisma/client": "6.6.0",
+    "@prisma/client": "6.7.0",
     "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-checkbox": "^1.2.3",
     "@radix-ui/react-collapsible": "^1.1.8",
@@ -102,7 +102,7 @@
     "msw": "^2.7.5",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "prisma": "^6.6.0",
+    "prisma": "6.7.0",
     "react-router-devtools": "^1.1.10",
     "remix-flat-routes": "^0.8.5",
     "tailwindcss": "^4.1.4",
