--- a/package.json
+++ b/package.json
@@ -63,8 +63,8 @@
     "sonner": "^2.0.3",
     "stripe": "^18.1.1",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss-animate": "^1.0.7",
     "tiny-invariant": "^1.3.3",
+    "tw-animate-css": "1.3.1",
     "zod": "^3.25.13"
   },
   "devDependencies": {
