--- a/package.json
+++ b/package.json
@@ -14,21 +14,7 @@
     "@oslojs/encoding": "^1.1.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^6.11.1",
-    "@radix-ui/react-accordion": "1.2.11",
-    "@radix-ui/react-avatar": "^1.1.10",
-    "@radix-ui/react-checkbox": "^1.3.2",
-    "@radix-ui/react-collapsible": "^1.1.11",
-    "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-navigation-menu": "^1.2.13",
-    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-radio-group": "^1.3.7",
-    "@radix-ui/react-select": "^2.2.5",
-    "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-tabs": "^1.1.12",
-    "@radix-ui/react-tooltip": "^1.2.7",
     "@radix-ui/react-visually-hidden": "^1.2.3",
     "@react-email/components": "^0.1.1",
     "@react-router/node": "^7.6.3",
@@ -49,6 +35,7 @@
     "input-otp": "^1.4.2",
     "isbot": "^5.1.28",
     "lucide-react": "^0.525.0",
+    "radix-ui": "1.4.2",
     "ramda": "^0.31.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
