--- a/package.json
+++ b/package.json
@@ -5,22 +5,22 @@
     }
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.873.0",
-    "@aws-sdk/lib-storage": "^3.873.0",
-    "@aws-sdk/s3-request-presigner": "^3.873.0",
-    "@hookform/resolvers": "^5.2.1",
+    "@aws-sdk/client-s3": "^3.901.0",
+    "@aws-sdk/lib-storage": "^3.901.0",
+    "@aws-sdk/s3-request-presigner": "^3.901.0",
+    "@hookform/resolvers": "^5.2.2",
     "@mjackson/form-data-parser": "^0.9.1",
     "@oslojs/crypto": "^1.0.1",
     "@oslojs/encoding": "^1.1.0",
     "@paralleldrive/cuid2": "^2.2.2",
-    "@prisma/client": "^6.14.0",
+    "@prisma/client": "^6.16.3",
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-visually-hidden": "^1.2.3",
-    "@react-email/components": "^0.5.1",
-    "@react-router/node": "^7.8.2",
-    "@react-router/serve": "^7.8.2",
+    "@react-email/components": "^0.5.5",
+    "@react-router/node": "^7.9.3",
+    "@react-router/serve": "^7.9.3",
     "@supabase/ssr": "^0.7.0",
-    "@supabase/supabase-js": "^2.56.0",
+    "@supabase/supabase-js": "^2.58.0",
     "@tanstack/react-table": "^8.21.3",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
@@ -28,77 +28,77 @@
     "cmdk": "^1.1.1",
     "copy-to-clipboard": "^3.3.3",
     "date-fns": "^4.1.0",
-    "i18next": "^25.4.2",
+    "i18next": "^25.5.3",
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-fs-backend": "^2.6.0",
     "i18next-http-backend": "^3.0.2",
     "input-otp": "^1.4.2",
-    "isbot": "^5.1.30",
-    "lucide-react": "^0.541.0",
+    "isbot": "^5.1.31",
+    "lucide-react": "^0.544.0",
     "radix-ui": "^1.4.3",
     "ramda": "^0.31.3",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-dropzone": "^14.3.8",
-    "react-hook-form": "^7.62.0",
-    "react-i18next": "^15.7.2",
+    "react-hook-form": "^7.63.0",
+    "react-i18next": "^15.7.4",
     "react-icons": "^5.5.0",
-    "react-router": "^7.8.2",
-    "remix-i18next": "^7.3.0",
-    "remix-utils": "^8.8.0",
+    "react-router": "^7.9.3",
+    "remix-i18next": "^7.4.0",
+    "remix-utils": "^9.0.0",
     "sonner": "^2.0.7",
-    "stripe": "^18.4.0",
+    "stripe": "^19.0.0",
     "tailwind-merge": "^3.3.1",
     "tiny-invariant": "^1.3.3",
-    "tw-animate-css": "^1.3.7",
-    "zod": "^3.25.76"
+    "tw-animate-css": "^1.4.0",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@axe-core/playwright": "^4.10.2",
-    "@commitlint/cli": "^19.8.1",
-    "@commitlint/config-conventional": "^19.8.1",
-    "@eslint/compat": "^1.3.2",
-    "@eslint/js": "^9.34.0",
+    "@commitlint/cli": "^20.1.0",
+    "@commitlint/config-conventional": "^20.0.0",
+    "@eslint/compat": "^1.4.0",
+    "@eslint/js": "^9.36.0",
     "@faker-js/faker": "^10.0.0",
-    "@playwright/test": "^1.55.0",
-    "@react-router/dev": "^7.8.2",
-    "@react-router/remix-routes-option-adapter": "^7.8.2",
-    "@tailwindcss/vite": "^4.1.12",
+    "@playwright/test": "^1.55.1",
+    "@react-router/dev": "^7.9.3",
+    "@react-router/remix-routes-option-adapter": "^7.9.3",
+    "@tailwindcss/vite": "^4.1.14",
     "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^24",
-    "@types/ramda": "^0.31.0",
-    "@types/react": "^19.1.11",
-    "@types/react-dom": "^19.1.7",
+    "@types/ramda": "^0.31.1",
+    "@types/react": "^19.2.0",
+    "@types/react-dom": "^19.2.0",
     "@vitest/coverage-v8": "^3.2.4",
-    "@vitest/eslint-plugin": "^1.3.4",
+    "@vitest/eslint-plugin": "^1.3.15",
     "commitizen": "^4.3.1",
-    "cross-env": "^10.0.0",
+    "cross-env": "^10.1.0",
     "cz-conventional-changelog": "^3.3.0",
-    "dotenv": "^17.2.1",
-    "eslint": "^9.34.0",
+    "dotenv": "^17.2.3",
+    "eslint": "^9.36.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-playwright": "^2.2.2",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "eslint-plugin-testing-library": "^7.6.6",
-    "eslint-plugin-unicorn": "^60.0.0",
-    "happy-dom": "^18.0.1",
+    "eslint-plugin-testing-library": "^7.11.0",
+    "eslint-plugin-unicorn": "^61.0.2",
+    "happy-dom": "^19.0.2",
     "husky": "^9.1.7",
-    "msw": "^2.10.5",
+    "msw": "^2.11.3",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "prisma": "^6.14.0",
-    "react-router-devtools": "^5.0.7",
+    "prisma": "^6.16.3",
+    "react-router-devtools": "^5.1.3",
     "remix-flat-routes": "^0.8.5",
-    "tailwindcss": "^4.1.12",
-    "tsx": "^4.20.5",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8.40.0",
-    "vite": "^7.1.3",
+    "tailwindcss": "^4.1.14",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.45.0",
+    "vite": "^7.1.9",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
   },
@@ -125,7 +125,8 @@
     "start": "react-router-serve ./build/server/index.js",
     "start-with-server-mocks": "cross-env SERVER_MOCKS=true npm run start",
     "stripe:resend-events": "xargs -n1 stripe events resend < stripe-events.txt",
-    "test": "vitest --reporter=verbose",
+    "test": "vitest --reporter=verbose --run",
+    "test:watch": "vitest --reporter=verbose",
     "test:e2e": "npx playwright test",
     "test:e2e:ui": "npx playwright test --ui",
     "typecheck": "react-router typegen && tsc",
