--- a/package.json
+++ b/package.json
@@ -4,6 +4,15 @@
       "path": "cz-conventional-changelog"
     }
   },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,css,md}": [
+      "prettier --write"
+    ]
+  },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.901.0",
     "@aws-sdk/lib-storage": "^3.901.0",
@@ -88,6 +97,7 @@
     "eslint-plugin-unicorn": "^61.0.2",
     "happy-dom": "^19.0.2",
     "husky": "^9.1.7",
+    "lint-staged": "^16.2.3",
     "msw": "^2.11.3",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
@@ -95,6 +105,7 @@
     "react-router-devtools": "^5.1.3",
     "remix-flat-routes": "^0.8.5",
     "tailwindcss": "^4.1.14",
+    "tsc-files": "^1.1.4",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.45.0",
