--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,19 @@
 {
+  "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
     "allowJs": true,
     "baseUrl": ".",
     "checkJs": true,
     "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
     "incremental": true,
+    "isolatedModules": true,
     "jsx": "react-jsx",
     "lib": ["DOM", "DOM.Iterable", "ES2023"],
     "module": "esnext",
     "moduleResolution": "bundler",
     "noEmit": true,
+    "noUncheckedIndexedAccess": true,
     "paths": {
       "~/*": ["./app/*"]
     },
@@ -17,7 +21,7 @@
     "rootDirs": [".", "./.react-router/types"],
     "skipLibCheck": true,
     "strict": true,
-    "target": "ES2022",
+    "target": "ES2023",
     "types": ["node", "vite/client"],
     "verbatimModuleSyntax": true
   },
