feat(env): add new way of adding env vars

--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,6 @@ SUPABASE_SERVICE_ROLE_KEY="ey<SERVICE_ROLE_KEY>"
 
 # App
 APP_URL="http://localhost:3000"
-SESSION_SECRET=a-sufficiently-long-secret-ideally-32-characters-or-more
 COOKIE_SECRET=a-sufficiently-long-secret-ideally-32-characters-or-more
 RESEND_API_KEY="re_..."
 
@@ -28,3 +27,6 @@ SUPABASE_PROJECT_ID="project-id" # project ref
 HONEYPOT_SECRET="<your-honeypot-secret>"
 STRIPE_SECRET_KEY="sk_test_<SECRET_KEY>"
 STRIPE_WEBHOOK_SECRET="whsec_<WEBHOOK_SECRET>"
+
+# New
+ALLOW_INDEXING="true"
