--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "cmdk": "1.1.1",
+    "cobe": "0.6.5",
     "copy-to-clipboard": "3.3.3",
     "date-fns": "4.1.0",
     "i18next": "25.6.0",
