--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@aws-sdk/s3-request-presigner": "3.927.0",
     "@conform-to/react": "1.13.3",
     "@conform-to/zod": "1.13.3",
+    "@epic-web/client-hints": "1.3.8",
+    "@epic-web/invariant": "1.0.0",
     "@nichtsam/helmet": "0.3.1",
     "@oslojs/crypto": "1.0.1",
     "@oslojs/encoding": "1.1.0",
