feat(mocks): mock auth mocks during development

--- a/package.json
+++ b/package.json
@@ -106,8 +106,7 @@
     "build": "react-router build",
     "check": "biome check --write .",
     "dev": "react-router dev",
-    "dev-with-mocks": "cross-env VITE_CLIENT_MOCKS=true SERVER_MOCKS=true npm run dev",
-    "dev-with-server-mocks": "cross-env SERVER_MOCKS=true npm run dev",
+    "dev:mocks": "cross-env MOCKS=true npm run dev",
     "lint": "biome ci --css-parse-tailwind-directives=true .",
     "prepare": "husky",
     "prisma:deploy": "npx prisma migrate deploy && npx prisma generate",
@@ -119,7 +118,7 @@
     "prisma:studio": "npx prisma studio",
     "prisma:wipe": "npx prisma migrate reset --force && npx prisma db push",
     "start": "react-router-serve ./build/server/index.js",
-    "start-with-server-mocks": "cross-env SERVER_MOCKS=true npm run start",
+    "start:mocks": "cross-env MOCKS=true npm run start",
     "stripe:resend-events": "xargs -n1 stripe events resend < stripe-events.txt",
     "test": "vitest --reporter=verbose --run",
     "test:e2e": "npx playwright test",
