--- a/.env.example
+++ b/.env.example
@@ -9,22 +9,22 @@ DATABASE_URL=postgresql://postgres:postgres@localhost:5432/postgres
 
 # Supabase
 VITE_SUPABASE_URL=https://abcdefghijklmnopqrst.supabase.co
-VITE_SUPABASE_ANON_KEY="ey<ANON_KEY>"
-SUPABASE_SERVICE_ROLE_KEY="ey<SERVICE_ROLE_KEY>"
+VITE_SUPABASE_ANON_KEY="ey_mock-anon-key"
+SUPABASE_SERVICE_ROLE_KEY="ey_mock-service-role"
 
 # App
 APP_URL="http://localhost:3000"
 COOKIE_SECRET=a-sufficiently-long-secret-ideally-32-characters-or-more
-RESEND_API_KEY="re_..."
+RESEND_API_KEY="re_blAh_blaHBlaHblahBLAhBlAh"
 
 # Supabase Storage via S3 compatible API
-STORAGE_ACCESS_KEY_ID="ey<ACCESS_KEY>"
-STORAGE_SECRET_ACCESS_KEY="ey<SECRET_KEY>"
+STORAGE_ACCESS_KEY_ID="ey_mock-access-key"
+STORAGE_SECRET_ACCESS_KEY="ey_mock-secret-key"
 STORAGE_REGION="us-east-1"
-SUPABASE_PROJECT_ID="project-id" # project ref
+SUPABASE_PROJECT_ID="abcdefghijklmnopqrst" # project ref
 
 # Stripe
-HONEYPOT_SECRET="<your-honeypot-secret>"
+HONEYPOT_SECRET="super-duper-s3cret"
 STRIPE_SECRET_KEY="sk_test_<SECRET_KEY>"
 STRIPE_WEBHOOK_SECRET="whsec_<WEBHOOK_SECRET>"
 
