--- a/.env.example
+++ b/.env.example
@@ -5,10 +5,10 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 # Prisma
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/postgres
 
 # Supabase
-VITE_SUPABASE_URL="https://<PROJECT_ID>.supabase.co"
+VITE_SUPABASE_URL=https://abcdefghijklmnopqrst.supabase.co
 VITE_SUPABASE_ANON_KEY="ey<ANON_KEY>"
 SUPABASE_SERVICE_ROLE_KEY="ey<SERVICE_ROLE_KEY>"
 
