--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,24 +86,6 @@ jobs:
         options: >-
           --health-cmd "pg_isready -U postgres" --health-interval 10s
           --health-timeout 5s --health-retries 5
-    env:
-      DATABASE_URL: postgresql://postgres:postgres@localhost:5432/postgres
-      POSTGRES_PRISMA_URL: postgresql://postgres:postgres@localhost:5432/postgres
-      POSTGRES_URL_NON_POOLING: postgresql://postgres:postgres@localhost:5432/postgres
-      APP_URL: http://localhost:3000
-      COOKIE_SECRET: a-sufficiently-long-secret-ideally-32-characters-or-more
-      VITE_SUPABASE_ANON_KEY: ${{ secrets.VITE_SUPABASE_ANON_KEY }}
-      VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
-      STORAGE_ACCESS_KEY_ID: ${{ secrets.STORAGE_ACCESS_KEY_ID }}
-      STORAGE_SECRET_ACCESS_KEY: ${{ secrets.STORAGE_SECRET_ACCESS_KEY }}
-      STORAGE_REGION: ${{ secrets.STORAGE_REGION }}
-      SUPABASE_PROJECT_ID: ${{ secrets.SUPABASE_PROJECT_ID }}
-      SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
-      RESEND_API_KEY: ${{ secrets.RESEND_API_KEY }}
-      HONEYPOT_SECRET: ${{ secrets.HONEYPOT_SECRET }}
-      STRIPE_SECRET_KEY: ${{ secrets.STRIPE_SECRET_KEY }}
-      STRIPE_WEBHOOK_SECRET: ${{ secrets.STRIPE_WEBHOOK_SECRET }}
-
     steps:
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v4
@@ -116,6 +98,9 @@ jobs:
 
       - name: 📥 Install dependencies
         run: npm ci
+
+      - name: 🏄 Copy test env vars
+        run: cp .env.example .env
 
       - name: 🛠 Setup Database
         run: npm run prisma:wipe
@@ -138,24 +123,6 @@ jobs:
         options: >-
           --health-cmd "pg_isready -U postgres" --health-interval 10s
           --health-timeout 5s --health-retries 5
-    env:
-      DATABASE_URL: postgresql://postgres:postgres@localhost:5432/postgres
-      POSTGRES_PRISMA_URL: postgresql://postgres:postgres@localhost:5432/postgres
-      POSTGRES_URL_NON_POOLING: postgresql://postgres:postgres@localhost:5432/postgres
-      APP_URL: http://localhost:3000
-      COOKIE_SECRET: a-sufficiently-long-secret-ideally-32-characters-or-more
-      VITE_SUPABASE_ANON_KEY: ${{ secrets.VITE_SUPABASE_ANON_KEY }}
-      VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
-      STORAGE_ACCESS_KEY_ID: ${{ secrets.STORAGE_ACCESS_KEY_ID }}
-      STORAGE_SECRET_ACCESS_KEY: ${{ secrets.STORAGE_SECRET_ACCESS_KEY }}
-      STORAGE_REGION: ${{ secrets.STORAGE_REGION }}
-      SUPABASE_PROJECT_ID: ${{ secrets.SUPABASE_PROJECT_ID }}
-      SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
-      RESEND_API_KEY: ${{ secrets.RESEND_API_KEY }}
-      HONEYPOT_SECRET: ${{ secrets.HONEYPOT_SECRET }}
-      STRIPE_SECRET_KEY: ${{ secrets.STRIPE_SECRET_KEY }}
-      STRIPE_WEBHOOK_SECRET: ${{ secrets.STRIPE_WEBHOOK_SECRET }}
-
     steps:
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v4
@@ -168,6 +135,9 @@ jobs:
 
       - name: 📥 Install dependencies
         run: npm ci
+
+      - name: 🏄 Copy test env vars
+        run: cp .env.example .env
 
       - name: 🌐 Install Playwright Browsers
         run: npx playwright install --with-deps chromium
