--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     }
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "3.931.0",
-    "@aws-sdk/lib-storage": "3.931.0",
-    "@aws-sdk/s3-request-presigner": "3.931.0",
+    "@aws-sdk/client-s3": "3.937.0",
+    "@aws-sdk/lib-storage": "3.937.0",
+    "@aws-sdk/s3-request-presigner": "3.937.0",
     "@conform-to/react": "1.13.3",
     "@conform-to/zod": "1.13.3",
     "@epic-web/client-hints": "1.3.8",
@@ -16,13 +16,14 @@
     "@oslojs/crypto": "1.0.1",
     "@oslojs/encoding": "1.1.0",
     "@paralleldrive/cuid2": "3.0.4",
-    "@prisma/client": "6.19.0",
+    "@prisma/adapter-pg": "7.0.0",
+    "@prisma/client": "7.0.0",
     "@react-email/components": "1.0.1",
     "@react-router/node": "7.9.6",
     "@react-router/serve": "7.9.6",
     "@remix-run/form-data-parser": "0.14.0",
     "@supabase/ssr": "0.7.0",
-    "@supabase/supabase-js": "2.81.1",
+    "@supabase/supabase-js": "2.84.0",
     "@tanstack/react-table": "8.21.3",
     "canvas-confetti": "1.9.4",
     "class-variance-authority": "0.7.1",
@@ -31,32 +32,33 @@
     "cobe": "0.6.5",
     "copy-to-clipboard": "3.3.3",
     "date-fns": "4.1.0",
-    "i18next": "25.6.2",
+    "dotenv": "17.2.3",
+    "i18next": "25.6.3",
     "i18next-browser-languagedetector": "8.2.0",
     "i18next-fetch-backend": "7.0.0",
     "input-otp": "1.4.2",
     "isbot": "5.1.32",
-    "lucide-react": "0.553.0",
+    "lucide-react": "0.554.0",
     "motion": "12.23.24",
     "pretty-cache-header": "1.0.0",
     "radix-ui": "1.4.3",
     "ramda": "0.32.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-i18next": "16.3.3",
+    "react-i18next": "16.3.5",
     "react-icons": "5.5.0",
     "react-router": "7.9.6",
     "remix-i18next": "7.4.2",
     "remix-utils": "9.0.0",
     "sonner": "2.0.7",
-    "stripe": "19.3.1",
+    "stripe": "20.0.0",
     "tailwind-merge": "3.4.0",
     "tw-animate-css": "1.4.0",
-    "zod": "4.1.12"
+    "zod": "4.1.13"
   },
   "devDependencies": {
     "@axe-core/playwright": "4.11.0",
-    "@biomejs/biome": "2.3.5",
+    "@biomejs/biome": "2.3.7",
     "@commitlint/cli": "20.1.0",
     "@commitlint/config-conventional": "20.0.0",
     "@faker-js/faker": "10.1.0",
@@ -71,27 +73,26 @@
     "@types/canvas-confetti": "1.9.0",
     "@types/node": "24",
     "@types/ramda": "0.31.1",
-    "@types/react": "19.2.4",
+    "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
-    "@vitest/coverage-v8": "4.0.9",
+    "@vitest/coverage-v8": "4.0.13",
     "commitizen": "4.3.1",
     "cross-env": "10.1.0",
     "cz-conventional-changelog": "3.3.0",
-    "dotenv": "17.2.3",
     "happy-dom": "20.0.10",
     "husky": "9.1.7",
-    "lint-staged": "16.2.6",
-    "msw": "2.12.1",
-    "prisma": "6.19.0",
+    "lint-staged": "16.2.7",
+    "msw": "2.12.3",
+    "prisma": "7.0.0",
     "react-router-devtools": "6.0.0",
     "remix-flat-routes": "0.8.5",
     "tailwindcss": "4.1.17",
     "tsc-files": "1.1.4",
     "tsx": "4.20.6",
     "typescript": "5.9.3",
-    "vite": "7.2.2",
+    "vite": "7.2.4",
     "vite-tsconfig-paths": "5.1.4",
-    "vitest": "4.0.9"
+    "vitest": "4.0.13"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,css,md}": [
@@ -99,7 +100,7 @@
     ]
   },
   "name": "reactsquad-react-router-saas-template",
-  "packageManager": "npm@11.6.2",
+  "packageManager": "npm@11.6.3",
   "private": true,
   "scripts": {
     "build": "react-router build",
